--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ body {
     font-size: 18px;
     color: #E5E7EB;
     text-decoration: none;
+    margin: 10px;
 
 }
-
 
 .hero-content {
     display: flex;
