Add 10px right padding to .content, 100% height to .content and .hero-image

--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ body {
 
 .content {
     width: 50%;
-   
+    height: 100%;
+    padding-right: 10px;
 }
 
 .hero-image {
@@ -50,4 +51,5 @@ body {
     align-items: center;
     width: 50%;
     background-color: grey;
+    height: 100%;
 } 
