--- a/style.css
+++ b/style.css
@@ -51,5 +51,14 @@ body {
     align-items: center;
     width: 50%;
     background-color: grey;
-    height: 100%;
+    height: 50%;
 } 
+
+button {
+    background-color: #3882F6;
+    color: #E5E7EB;
+    padding: 10px 30px;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: bold;
+}
